--- a/api-reference/analyze-audio.mdx
+++ b/api-reference/analyze-audio.mdx
@@ -2,7 +2,7 @@
 openapi: post /moderate/audio
 ---
 
-<Note>
+<Warning>
   Audio moderation needs to be enabled for accounts to use this endpoint. Please
   contact your support@moderationapi.com to talk about enabling this feature.
-</Note>
+</Warning>
