--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -50,6 +50,14 @@ Moderation API's server-side helper libraries (also known as server-side SDKs) r
   Library for Node.js with support for TypeScript.
 </Card>
 
+<Card
+  title="Ruby gem"
+  icon="gem"
+  href="https://rubygems.org/gems/moderation_api"
+>
+  Gem for Ruby.
+</Card>
+
 </CardGroup>
 
 ## OpenAPI Specification
