--- a/api-reference/analyze-image.mdx
+++ b/api-reference/analyze-image.mdx
@@ -1,3 +1,227 @@
 ---
 openapi: post /moderate/image
 ---
+
+<RequestExample>
+
+```bash cURL
+curl -X POST 'https://moderationapi.com/api/v1/moderate/image' \
+  -H 'Authorization: Bearer <token>' \
+  -H 'Content-Type: application/json' \
+  -d '{
+    "url": "https://example.com/image.jpg",
+    "contentId": "image-123",
+    "authorId": "user-123",
+    "contextId": "post-123",
+    "metadata": {
+      "source": "user_upload"
+    }
+  }'
+```
+
+```javascript Node.js
+import ModerationApi from "@moderationapi/sdk";
+
+const moderationApi = new ModerationApi({
+  apiKey: "<token>",
+});
+
+const result = await moderationApi.moderate.image({
+  url: "https://example.com/image.jpg",
+  contentId: "image-123",
+  authorId: "user-123",
+  contextId: "post-123",
+  metadata: {
+    source: "user_upload",
+  },
+});
+```
+
+```ruby Ruby
+require 'moderation_api'
+
+ModerationApi.configure do |config|
+  config.access_token = '<token>'
+end
+
+api_instance = ModerationApi::ModerateApi.new
+request = ModerationApi::ModerationImageRequest.new({
+  url: 'https://example.com/image.jpg',
+  content_id: 'image-123',
+  author_id: 'user-123',
+  context_id: 'post-123',
+  metadata: {
+    source: 'user_upload'
+  }
+})
+
+begin
+  result = api_instance.moderation_image(request)
+  p result
+rescue ModerationApi::ApiError => e
+  puts "Error when calling ModerateApi->moderation_image: #{e}"
+end
+```
+
+```python Python
+import requests
+
+url = "https://moderationapi.com/api/v1/moderate/image"
+headers = {
+    "Authorization": "Bearer <token>",
+    "Content-Type": "application/json"
+}
+payload = {
+    "url": "https://example.com/image.jpg",
+    "contentId": "image-123",
+    "authorId": "user-123",
+    "contextId": "post-123",
+    "metadata": {
+        "source": "user_upload"
+    }
+}
+
+response = requests.post(url, headers=headers, json=payload)
+result = response.json()
+```
+
+```php PHP
+<?php
+$url = "https://moderationapi.com/api/v1/moderate/image";
+$headers = array(
+    "Authorization: Bearer <token>",
+    "Content-Type: application/json"
+);
+$data = array(
+    "url" => "https://example.com/image.jpg",
+    "contentId" => "image-123",
+    "authorId" => "user-123",
+    "contextId" => "post-123",
+    "metadata" => array(
+        "source" => "user_upload"
+    )
+);
+
+$ch = curl_init($url);
+curl_setopt($ch, CURLOPT_POST, true);
+curl_setopt($ch, CURLOPT_POSTFIELDS, json_encode($data));
+curl_setopt($ch, CURLOPT_HTTPHEADER, $headers);
+curl_setopt($ch, CURLOPT_RETURNTRANSFER, true);
+
+$response = curl_exec($ch);
+curl_close($ch);
+
+$result = json_decode($response, true);
+?>
+```
+
+```java Java
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.URI;
+
+String url = "https://moderationapi.com/api/v1/moderate/image";
+String requestBody = """
+    {
+        "url": "https://example.com/image.jpg",
+        "contentId": "image-123",
+        "authorId": "user-123",
+        "contextId": "post-123",
+        "metadata": {
+            "source": "user_upload"
+        }
+    }
+    """;
+
+HttpClient client = HttpClient.newHttpClient();
+HttpRequest request = HttpRequest.newBuilder()
+    .uri(URI.create(url))
+    .header("Authorization", "Bearer <token>")
+    .header("Content-Type", "application/json")
+    .POST(HttpRequest.BodyPublishers.ofString(requestBody))
+    .build();
+
+HttpResponse<String> response = client.send(request,
+    HttpResponse.BodyHandlers.ofString());
+System.out.println(response.body());
+```
+
+```go Go
+package main
+
+import (
+    "bytes"
+    "encoding/json"
+    "fmt"
+    "net/http"
+)
+
+func main() {
+    url := "https://moderationapi.com/api/v1/moderate/image"
+    data := map[string]interface{}{
+        "url": "https://example.com/image.jpg",
+        "contentId": "image-123",
+        "authorId": "user-123",
+        "contextId": "post-123",
+        "metadata": map[string]interface{}{
+            "source": "user_upload",
+        },
+    }
+
+    jsonData, _ := json.Marshal(data)
+    req, _ := http.NewRequest("POST", url, bytes.NewBuffer(jsonData))
+    req.Header.Set("Authorization", "Bearer <token>")
+    req.Header.Set("Content-Type", "application/json")
+
+    client := &http.Client{}
+    resp, err := client.Do(req)
+    if err != nil {
+        panic(err)
+    }
+    defer resp.Body.Close()
+
+    var result map[string]interface{}
+    json.NewDecoder(resp.Body).Decode(&result)
+    fmt.Println(result)
+}
+```
+
+</RequestExample>
+
+<ResponseExample>
+```json 200
+{
+    "status": "success",
+    "contentId": "image-123",
+    "request": {
+        "timestamp": 1699344668022,
+        "quota_usage": 1
+    },
+    "flagged": false,
+    "labels": [
+        {
+            "label": "nudity",
+            "score": 0.001
+        },
+        {
+            "label": "suggestive",
+            "score": 0.002
+        },
+        {
+            "label": "gore",
+            "score": 0.001
+        },
+        {
+            "label": "hate",
+            "score": 0.001
+        },
+        {
+            "label": "violence",
+            "score": 0.001
+        }
+    ],
+    "texts": ["Sample text found in image"]
+}
+```
+</ResponseExample>
