--- a/api-reference/analyze-text.mdx
+++ b/api-reference/analyze-text.mdx
@@ -1,6 +1,194 @@
 ---
 openapi: post /moderate/text
+sidebarTitle: Analyze text
 ---
+
+<RequestExample>
+
+```bash cURL
+curl -X POST 'https://moderationapi.com/api/v1/moderate/text' \
+  -H 'Authorization: Bearer <token>' \
+  -H 'Content-Type: application/json' \
+  -d '{
+    "value": "Hello world",
+    "contentId": "post-123",
+    "authorId": "user-123",
+    "contextId": "room-123",
+    "metadata": {
+      "source": "chat"
+    }
+  }'
+```
+
+```javascript Node.js
+import ModerationApi from "@moderationapi/sdk";
+
+const moderationApi = new ModerationApi({
+  apiKey: "<token>",
+});
+
+const result = await moderationApi.moderate.text({
+  value: "Hello world",
+  contentId: "post-123",
+  authorId: "user-123",
+  contextId: "room-123",
+  metadata: {
+    source: "chat",
+  },
+});
+```
+
+```ruby Ruby
+require 'moderation_api'
+
+ModerationApi.configure do |config|
+  config.access_token = '<token>'
+end
+
+api_instance = ModerationApi::ModerateApi.new
+request = ModerationApi::ModerationTextRequest.new({
+  value: 'Hello world',
+  content_id: 'post-123',
+  author_id: 'user-123',
+  context_id: 'room-123',
+  metadata: {
+    source: 'chat'
+  }
+})
+
+begin
+  result = api_instance.moderation_text(request)
+  p result
+rescue ModerationApi::ApiError => e
+  puts "Error when calling ModerateApi->moderation_text: #{e}"
+end
+```
+
+```python Python
+import requests
+
+url = "https://moderationapi.com/api/v1/moderate/text"
+headers = {
+    "Authorization": "Bearer <token>",
+    "Content-Type": "application/json"
+}
+payload = {
+    "value": "Hello world",
+    "contentId": "post-123",
+    "authorId": "user-123",
+    "contextId": "room-123",
+    "metadata": {
+        "source": "chat"
+    }
+}
+
+response = requests.post(url, headers=headers, json=payload)
+result = response.json()
+```
+
+```php PHP
+<?php
+$url = "https://moderationapi.com/api/v1/moderate/text";
+$headers = array(
+    "Authorization: Bearer <token>",
+    "Content-Type": "application/json"
+);
+$data = array(
+    "value" => "Hello world",
+    "contentId" => "post-123",
+    "authorId" => "user-123",
+    "contextId" => "room-123",
+    "metadata" => array(
+        "source" => "chat"
+    )
+);
+
+$ch = curl_init($url);
+curl_setopt($ch, CURLOPT_POST, true);
+curl_setopt($ch, CURLOPT_POSTFIELDS, json_encode($data));
+curl_setopt($ch, CURLOPT_HTTPHEADER, $headers);
+curl_setopt($ch, CURLOPT_RETURNTRANSFER, true);
+
+$response = curl_exec($ch);
+curl_close($ch);
+
+$result = json_decode($response, true);
+?>
+```
+
+```java Java
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.URI;
+
+String url = "https://moderationapi.com/api/v1/moderate/text";
+String requestBody = """
+    {
+        "value": "Hello world",
+        "contentId": "post-123",
+        "authorId": "user-123",
+        "contextId": "room-123",
+        "metadata": {
+            "source": "chat"
+        }
+    }
+    """;
+
+HttpClient client = HttpClient.newHttpClient();
+HttpRequest request = HttpRequest.newBuilder()
+    .uri(URI.create(url))
+    .header("Authorization", "Bearer <token>")
+    .header("Content-Type", "application/json")
+    .POST(HttpRequest.BodyPublishers.ofString(requestBody))
+    .build();
+
+HttpResponse<String> response = client.send(request,
+    HttpResponse.BodyHandlers.ofString());
+System.out.println(response.body());
+```
+
+```go Go
+package main
+
+import (
+    "bytes"
+    "encoding/json"
+    "fmt"
+    "net/http"
+)
+
+func main() {
+    url := "https://moderationapi.com/api/v1/moderate/text"
+    data := map[string]interface{}{
+        "value": "Hello world",
+        "contentId": "post-123",
+        "authorId": "user-123",
+        "contextId": "room-123",
+        "metadata": map[string]interface{}{
+            "source": "chat"
+        }
+    }
+
+    jsonData, _ := json.Marshal(data)
+    req, _ := http.NewRequest("POST", url, bytes.NewBuffer(jsonData))
+    req.Header.Set("Authorization", "Bearer <token>")
+    req.Header.Set("Content-Type", "application/json")
+
+    client := &http.Client{}
+    resp, err := client.Do(req)
+    if err != nil {
+        panic(err)
+    }
+    defer resp.Body.Close()
+
+    var result map[string]interface{}
+    json.NewDecoder(resp.Body).Decode(&result)
+    fmt.Println(result)
+}
+```
+
+</RequestExample>
 
 <ResponseExample>
 ```json 200
@@ -14,6 +202,7 @@ openapi: post /moderate/text
     "content_moderated": false,
     "data_found": false,
     "flagged": true,
+    "unicode_spoofing": false,
     "original": "How do I make a bomb?",
     "content": "How do I make a bomb?",
     "nsfw": {
@@ -38,10 +227,10 @@ openapi: post /moderate/text
             "NEUTRAL": 0.55814815
         }
     }
-
 }
+```
+</ResponseExample>
 
 ```
 
-</ ResponseExample>
-
+```
