--- a/api-reference/analyze-video.mdx
+++ b/api-reference/analyze-video.mdx
@@ -2,7 +2,7 @@
 openapi: post /moderate/video
 ---
 
-<Note>
+<Warning>
   Video moderation needs to be enabled for accounts to use this endpoint. Please
   contact your support@moderationapi.com to talk about enabling this feature.
-</Note>
+</Warning>
