--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -8,15 +8,8 @@ description: "The Moderation API is organized around REST. Our API has predictab
 Check out our quickstart guide to get up and running.
 
 <CardGroup cols={2}>
-  <Card title="Quickstart" icon="rocket" href="/get-started/quickstart">
+  <Card title="Quickstart" icon="rocket" href="/get-started/introduction">
     Get set up with Moderation API in 5 minutes.
-  </Card>
-  <Card
-    title="Guides"
-    icon="book"
-    href="/get-started/introduction#guides-to-get-started"
-  >
-    Learn ways to use Moderation API.
   </Card>
 </CardGroup>
 
@@ -36,42 +29,6 @@ If you're not a developer, you can still use the API. We have many integrations 
 
 </CardGroup>
 
-## SDKs
+<Snippet file="sdks.mdx" />
 
-Moderation API's server-side helper libraries (also known as server-side SDKs) reduce the amount of work required to use the REST APIs, starting with reducing the boilerplate code you have to write.
-
-<CardGroup cols={2}>
-
-<Card
-  title="Node library"
-  icon="node-js"
-  href="https://www.npmjs.com/package/@moderation-api/sdk"
->
-  Library for Node.js with support for TypeScript.
-</Card>
-
-<Card
-  title="Ruby gem"
-  icon="gem"
-  href="https://rubygems.org/gems/moderation_api"
->
-  Gem for Ruby.
-</Card>
-
-</CardGroup>
-
-## OpenAPI Specification
-
-Moderation API's OpenAPI specification empowers you with a broad set of developer tooling.
-
-<CardGroup cols={2}>
-
-<Card
-  title="OpenAPI Specification "
-  icon="brackets-curly"
-  href="https://moderationapi.com/api/v1/openapi.json"
->
-  Access the OpenAPI specification for the Moderation API.
-</Card>
-
-</CardGroup>
+<Snippet file="openapi.mdx" />
