--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -1,32 +1,54 @@
 ---
-title: Introduction
-description: "Explore our guides and examples to integrate Moderation API."
+title: "Introduction"
+description: "Moderation API is a full stack content moderation solution."
 ---
 
-<Frame>
-  <img className="block " src="/images/intro.webp" alt="Intro img" />
-</Frame>
+## Quickstart
 
-Moderation API is a full stack content moderation solution that helps you streamline your content moderation. You get state-of-the-art AI models for automated content moderation, a full-featured moderation dashboard for manual moderation, analytics for your content, and cutomizable workflows to integrate with your platform.
+Learn how to get started with Moderation API in 5 minutes.
 
-Moderation API allows you to easily:
+<CardGroup cols={2}>
+  <Card title="Node.js quickstart" icon="node-js" href="/quickstart/nodejs">
+    Get started with Node.js and npm
+  </Card>
+  <Card title="Python quickstart" icon="python" href="/quickstart/python">
+    Get started with Python and pip
+  </Card>
+  <Card title="Go quickstart" icon="golang" href="/quickstart/go">
+    Get started with Go
+  </Card>
+  <Card title="Ruby quickstart" icon="gem" href="/quickstart/ruby">
+    Get started with Ruby
+  </Card>
+  <Card title="PHP quickstart" icon="php" href="/quickstart/php">
+    Get started with PHP
+  </Card>
+  <Card title="Java quickstart" icon="java" href="/quickstart/java">
+    Get started with Java
+  </Card>
+</CardGroup>
 
-- Automate content moderation
-- Create custom moderation workflows
-- Scale your platform safely
-- Identify bad actors
-- Get insights into your content
-- Build self-learning AI models
-- Hire human moderators
+## Not a developer?
 
-## Guides to get started
+If you're not a developer, you can still use the API. We have many integrations and no-code solutions that allows you to create projects and moderate content without writing a single line of code.
+
+<CardGroup cols={2}>
+
+<Card
+  title="Integrations"
+  icon="cube"
+  href="https://moderationapi.com/integrations"
+>
+  See our integrations and no-code solutions.
+</Card>
+
+</CardGroup>
+
+## Guides
 
 Can't find your use case? [Contact us](https://moderationapi.com/sales) and we'll help you get started.
 
 <CardGroup cols={2}>
-  <Card title="Quickstart" icon="rocket" href="/get-started/quickstart">
-    Get started with content moderation in 5 minutes.
-  </Card>
 
 <Card title="Automate your moderation" icon="bolt" href="/content-moderation">
   Automate your moderation with the API.
