--- a/account/quota-usage.mdx
+++ b/account/quota-usage.mdx
@@ -7,7 +7,7 @@ description: "Understanding how quota usage works and how to manage it is import
 
 All Moderation API plans include a certain amount of quota. This quota is used when you submit content for moderation.
 
-The included quota is different for each plan. See the [pricing page](/pricing) for more information.
+The included quota is different for each plan. See the [pricing page](https://moderationapi.com/pricing) for more information.
 
 Custom plans can be created with a different quota for use cases where you need more quota, so please [reach out](https://moderationapi.com/sales) if you need more quota.
 
